tests/paczka1/small_fuzzy/18456694.err
Error in line 8: jiUAPWSw S4& &7,0
Error in line 12: A343 S372 49,7
Error in line 7: jiUAPWSw S46 42,4
